# wave_simulation

./: Cargo.toml  README.md  rust-toolchain.toml
src/: main.rs  particle.rs  wave_simulation.rs
