[package]
name = "wave_simulation"
version = "0.1.0"
authors = ["physics3D <kroener.tobias@t-online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
three = "0.4.0"
mint = "0.5.6"
cgmath = "0.18.0"
rayon = "1.5.0"
